@@ -6331,6 +6331,8 @@ returns the foots of $f$ as \tet{ZpXQX_liftroot}, where $v$ is the valuation
 of the content of $f'$ and it is required that $v_p(f(a))>v$ and
 $v_p(f'(a))=v$.
 
+\fun{GEN}{ZpXQX_roots}{GEN F, GEN T, GEN p, long e}
+
 \fun{GEN}{ZpXQX_divrem}{GEN x, GEN Sp, GEN T,GEN q,GEN p,long e, GEN *pr}
 as \kbd{FpXQX\_divrem}. The parameter $q$ must be equal to $p^e$.
 
@@ -6338,6 +6340,8 @@ as \kbd{FpXQX\_divrem}. The parameter $q$ must be equal to $p^e$.
 As \kbd{FpXQX\_digits}. The parameter $q$ must be equal to $p^e$.
 
 \subsec{ZqX}
+
+\fun{GEN}{ZqX_roots}{GEN F, GEN T, GEN p, long e}
 
 \fun{GEN}{ZqX_liftfact}{GEN A, GEN B, GEN T, GEN pe, GEN p, long e}
 
